feat: 调整依赖和数据实体实现，增加agent的功能